--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,9 @@
+body {
+	font-family: 'Lato',sans-serif;
+	font-size: 14px;
+	line-height: 1.42857143;
+}
+
 .jumbotron-color {
 	background-color: #F1F0FF;
 	color: #8C489F;
@@ -13,4 +19,12 @@
 	font-family: 'Pacifico' !important;
 	font-style: normal;
 	font-weight: 400;
+}
+
+.nav-tabs>li>a {
+	color: #8C489F;
+}
+
+.nav-tabs-active {
+	background-color: #F1F0FF;
 }
